--- a/style.css
+++ b/style.css
@@ -9,13 +9,16 @@ body {
 }
 
 ul {
+    /*background-color: rgb(255, 174, 0);*/
     margin-top: 40px;
     list-style-type: none;
     display: flex;
     justify-content: space-around;
-    background-color: rgb(255, 174, 0);
     width: 25%;
     margin-left: auto;
+}
+
+.inscrire {
     font-weight: bold;
-    
+    color: #0065FC;
 }
