--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
     font-family: 'Raleway', sans-serif;
 }
 
+
+
 .logo {
     float: left;
 }
@@ -18,7 +20,17 @@ ul {
     margin-left: auto;
 }
 
+ul a { /*Sélectionne toutes les balises <a>  situées à l'intérieur d'une balise <ul>*/
+    text-decoration: none;
+}
+
+a:hover {
+    color: #0065FC;
+}
+
+
 .inscrire {
     font-weight: bold;
     color: #0065FC;
 }
+
