--- a/style.css
+++ b/style.css
@@ -21,11 +21,12 @@ ul {
 }
 
 ul a { /*Sélectionne toutes les balises <a>  situées à l'intérieur d'une balise <ul>*/
-    text-decoration: none;
+    text-decoration: none; /*enlever soulignement*/
+    color: red; /*couleur noir et non violet quand lien visisté*/
 }
 
 a:hover {
-    color: #0065FC;
+    color: #0065FC; /*bleu au survol*/
 }
 
 
