--- a/style.css
+++ b/style.css
@@ -1,15 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600&display=swap');
-
 body {
     font-family: 'Raleway', sans-serif;
 }
-
-
-
 .logo {
     float: left;
+    margin-top: 0em;
+    margin-left: 2em;
 }
-
 ul {
     /*background-color: rgb(255, 174, 0);*/
     margin-top: 40px;
@@ -19,23 +16,17 @@ ul {
     width: 25%;
     margin-left: auto;
 }
-
 ul a { /*Sélectionne toutes les balises <a>  situées à l'intérieur d'une balise <ul>*/
     text-decoration: none; /*enlever soulignement*/
     color: black; /*couleur noir et non violet quand lien visité*/
 }
-
 a:hover {
     color: #0065FC; /*bleu au survol*/
     border-top: 2px solid #0065FC;
     padding-top: 38px;
-
     /*padding: 10px;*/
 }
-
-
 .inscrire {
     font-weight: bold;
     color: #0065FC;
 }
-
