--- a/style.css
+++ b/style.css
@@ -1,59 +1,56 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600&display=swap');
-body {
-    font-family: 'Raleway', sans-serif;
-}
-
-
 header {
-    /*mettre mes élements les uns à côté des autres*/
+    height :300 px;
+    /* je prend toute la longueur*/  
+    width : 100 %; 
+    display : flex;
+    /*flex-direction : est déjà une valeur par défaut*/
+    /*flex-direction : row;*/
+    flex-wrap : wrap;
+}
+.navUn {
+    flex-basis : 50%;
+    background : blue;
+    /*padding: 10px;*/
+}
+.navDeux {
+    flex-basis : 50%;
+    background : pink;
     display: flex;
-    /*va à la ligne quand plus de place*/
-    flex-wrap: wrap;
+    justify-content: flex-end; 
 }
-
-header div {
-    /*toute mes divs ont une largeur de 25% sur ma feuille*/
-    width: 200px; 
-    height: 100px;
+.navTrois {
+    flex-basis : 50%;
+    background : orange;
+    display : flex;
+    justify-content: center;
 }
-
-/* Mobile */
-/* Si je passe en dessous de 575.98 Pixel le max-width va s'appliquer */
-@media (max-width: 575.98px) {
-    .navUn {
-        background-color: green;
-        order: 1;
-    }
-    .navDeux {
-        background-color: orange;
-        order: 3;
-    }
-    .navTrois {
-        background-color: red;
-        order: 4;
-    }
-    .navQuatre {
-        background-color: yellow;
-        order: 2;
-    }
+.navQuatre {
+    flex-basis : 50%;
+    background : red;
+    display : flex;
+    justify-content: center;
 }
-/* Tablette et pc */
-/* Si je passe au dessus de 575.98 Pixel le max-width va s'appliquer */
-@media (min-width: 575.98px) { 
-    .navUn {
-        background-color: green;
-        order: 1;
-    }
-    .navDeux {
-        background-color: cyan;
-        order: 2;
-    }
-    .navTrois {
-        background-color: blue;
-        order: 3;
-    }
-    .navQuatre {
-        background-color: purple;
-        order: 4;
-    }
+  /*Si je dépasse 700px je passe en mode pc*/
+@media (min-width: 700px) {
+header {
+    /*valeur déjà par défaut*/
+    /*flex-wrap : nowrap;*/
+}
+.navUn {
+    background-color: green;
+    flex-grow : 1;
+    order: 1;
+}
+.navDeux {
+    flex-basis : 15%;
+    order: 2;
+}
+.navTrois {
+    flex-basis : 15%;
+    order: 3;
+}
+.navQuatre {
+    flex-basis : 15%;
+    order: 4;
+} 
 }
