exo_jsfiddle_from_scratch

--- a/style.css
+++ b/style.css
@@ -1,56 +1,105 @@
-header {
-    height :300 px;
-    /* je prend toute la longueur*/  
-    width : 100 %; 
-    display : flex;
-    /*flex-direction : est déjà une valeur par défaut*/
-    /*flex-direction : row;*/
-    flex-wrap : wrap;
-}
-.navUn {
-    flex-basis : 50%;
-    background : blue;
-    /*padding: 10px;*/
-}
-.navDeux {
-    flex-basis : 50%;
-    background : pink;
+body {
+    background-color: grey;
+  }
+  
+  header {
     display: flex;
-    justify-content: flex-end; 
-}
-.navTrois {
-    flex-basis : 50%;
-    background : orange;
-    display : flex;
-    justify-content: center;
-}
-.navQuatre {
-    flex-basis : 50%;
-    background : red;
-    display : flex;
-    justify-content: center;
-}
-  /*Si je dépasse 700px je passe en mode pc*/
-@media (min-width: 700px) {
-header {
-    /*valeur déjà par défaut*/
-    /*flex-wrap : nowrap;*/
-}
-.navUn {
-    background-color: green;
-    flex-grow : 1;
+    background-color: purple;
+    /*width: 100px;*/
+    /*height: 50px;*/
+  }
+  
+  .nav1 {
+    background-color: red;
     order: 1;
-}
-.navDeux {
-    flex-basis : 15%;
+    flex-basis: 50%;
+    flex-grow: 1;
+  }
+  
+  .nav2 {
+    background-color: green;
     order: 2;
-}
-.navTrois {
-    flex-basis : 15%;
+    flex-basis: 10%;
+  }
+  
+  .nav3 {
+    background-color: yellow;
     order: 3;
-}
-.navQuatre {
-    flex-basis : 15%;
+    flex-basis: 10%;
+  }
+  
+  .nav4 {
+    background-color: brown;
     order: 4;
-} 
-}
+    flex-basis: 10%;
+  }
+   header a {
+       text-decoration: none;
+  }
+  .lien4 {
+      display: flex;
+      justify-content: flex-end;
+  }
+  .lien2 {
+      display: flex;
+      justify-content: center;
+  }
+  .lien3 {
+      display: flex;
+      justify-content: center;
+  }
+  header img {
+       height: 20px;
+       width: 60px;
+  }
+  
+  /* en dessus de 500px MOBILE */
+  @media (max-width: 500px) {
+    header {
+      /*width: 300px;*/
+      /*height: 50px;*/
+      display: flex;
+      flex-wrap: wrap;
+    }
+  
+    .nav1 {
+      background-color: blue;
+      order: 1;
+      display: flex;
+      flex-basis: 50%;
+    }
+  
+    .nav2 {
+      background-color: green;
+      order: 3;
+      flex-basis: 50%;
+    }
+  
+    .nav3 {
+      background-color: yellow;
+      order: 4;
+      flex-basis: 50%;
+    }
+  
+    .nav4 {
+      background-color: brown;
+      order: 2;
+      flex-basis: 50%;
+    }
+    header a {
+       text-decoration: none;
+    }
+    .lien4 {
+      display: flex;
+      justify-content: flex-end;
+    }
+      .lien2 {
+      display: flex;
+      justify-content: flex-end;
+    }
+      header img {
+         height: 20px;
+         width: 60px;
+       }
+  }
+  
