--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,32 +1,37 @@
     header ul {
       display: flex;
       flex-wrap: wrap;
-      width: 95vw;
-      margin: auto;
-      font-size: 1.3rem;
+      width: 100vw;
+      /*margin: auto;*/
+      font-size: 1.2rem;
       padding-top: 1rem;
     }
 
     .nav1 {
       /*background-color: blue;*/
+      padding-left: 1em;
       width: 47vw;
       display: flex;
     }
 
     .nav2 {
       /*background-color: green;*/
-      width: 47vw;
+      width: 50vw;
       display: flex;
       justify-content: center;
-      padding: 0.5rem 0 0 0;
+      padding-top: 1.6rem;
+      border-bottom: 4px solid #F2F2F2;
+      padding-bottom: 1.1rem;
     }
 
     .nav3 {
       /*background-color: yellow;*/
-      width: 47vw;
+      width: 50vw;
       display: flex;
       justify-content: center;
-      padding: 0.5rem 0 0 0;
+      padding-top: 1.6rem;
+      border-bottom: 4px solid #F2F2F2;
+      padding-bottom: 1.1rem;
     }
 
     .nav4 {
@@ -57,8 +62,8 @@
     }
 
     .nav2:hover {
-      border-bottom: 3px solid #0065FC;
-      padding-bottom: 0.6rem;
+      border-bottom: 4px solid #0065FC;
+      padding-bottom: 1.1rem;
     }
 
     .nav3 a {
@@ -70,6 +75,7 @@
     }
 
     .nav3:hover {
-      border-bottom: 3px solid #0065FC;
-      padding-bottom: 0.6rem;
+      border-bottom: 4px solid #0065FC;
+      padding-bottom: 1.1rem;
     }
+    
