--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,7 +1,7 @@
 /*ajout de breakpoint à 480 hérite pour le moment si en dessous de 1140 regarde min max..*/
-@media (min-width:480px) {
+/*min-width 480 si la largeur est supérieure, 481... j'applique cette feuille css en dessous je n'applique pas 479...*/
+/*max-width 480 si la largeur est inférieure,479... japplique cette feuille css au dessus je n'applique pas 481...*/
   header ul {
-    display: flex;
     flex-wrap: wrap;
     width: 100vw;
     /*margin: auto;*/
@@ -81,4 +81,19 @@
     border-bottom: 4px solid #0065FC;
     padding-bottom: 1.1rem;
   }
+
+/*MAIN*/
+
+.wrapper-icone {
+  width: 2rem;
+  height: 2rem;
+  background-color: red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 1rem;
+}
+
+.fa-info {
+  color: #0065FC;
 }
