--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/*feuille par défaut, sert à réunir les styles en commun, font, flex etc..pour éviter de surcharger car si modif sur mobile va hésiter sur desktop*/
+/*feuille par défaut, sert à réunir les styles en commun, font, flex etc..pour éviter de surcharger car si modif sur mobile va hériter sur desktop*/
 header ul {
     display: flex;
 }
@@ -6,5 +6,7 @@ header ul {
 /*propriété générique, couleur,*/
 /*bouton*/
 
-.fas
-/*hauteuyr largeur couleur de mes icones*/
+/*.fas {
+    
+}
+/*hauteur largeur couleur de mes icones*/
