--- a/css/reset.css
+++ b/css/reset.css
@@ -27,15 +27,15 @@ h6 {
   padding: 0;
 }
 
-h1,
+/*h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
   font-size: 100%;
-  font-weight: normal;
-}
+  font-weight: normal;*/
+
 
 ul {
   list-style: none;
@@ -51,7 +51,9 @@ html {
   box-sizing: border-box;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
