--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -83,26 +83,38 @@ a {
 /*MAIN SECTION SEARCH*/
 
 .search h1 {
-  font-size: 1.7rem;
-  margin: 2.5rem 0 0 2rem;
+  font-size: 1.5rem;
+  margin: 2.5rem 0 0 1.2rem;
 }
 
 .search p {
   font-size: 1.2rem;
-  margin: 1.2rem 0 0 2rem;
+  margin: 0.8rem 0 0 1.2rem;
 }
 
 .search-bar {
-  /*background-color: red;*/
-  padding: 2.5rem 0 2.5rem 3rem;
-  display: flex;
-  justify-content: center;
+  background-color: yellow;
+  padding: 2.5rem 0 2.5rem 4rem;
 }
 
 input {
   background-color: red;
   padding: 1rem 6rem 1rem 1rem;
+  
+}
 
+.search-button {
+  background-color:#0065FC;
+  width: 3.6rem;
+  height: 3.6rem;
+  border-radius: 15px;
+}
+
+.fa-search {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 /*.wrapper-icone {
   width: 2rem;
