--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -1,8 +1,7 @@
-@media (min-width:320px) {
-
   /* HEADER NAVBAR */
 
   header ul {
+    display: flex;
     flex-wrap: wrap;
     width: 100vw;
     font-size: 1.2rem;
@@ -74,6 +73,10 @@
     padding-bottom: 1.1rem;
   }
 
+  a {
+    text-decoration: none;
+  }
+
   /*SEARCH*/
 
   .search h1 {
@@ -107,6 +110,10 @@
 
   input::placeholder {
     color: black;
+  }
+
+  i {
+    font-size: 1.2rem;
   }
 
   .search-button {
@@ -178,7 +185,7 @@
     justify-content: center;
     /*c'est sans doute pas une bonne pratique, à vérifier...*/
     margin-top: -3px;
-    margin-left: -2px
+    margin-left: -2px;
   }
 
   .wrapper-filtre {
@@ -228,4 +235,3 @@
     padding-left: 1rem;
     font-size: 1.2rem;
   }
-}
